--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <header>
-        <h1> Bem-vindo(a) ao meu site </h1>
+        <h1> Bem-vindo(a) a Hollow's </h1>
         <p> Projeto +prati - Atividade 3 </p>
 
         <input type="checkbox" id="menu-toggle">
